--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "strapi": "strapi",
     "deploy": "strapi deploy"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-cloud": "4.25.8",
     "@strapi/plugin-i18n": "4.25.8",
     "@strapi/plugin-users-permissions": "4.25.8",
+    "@strapi/provider-upload-cloudinary": "^4.25.9",
     "@strapi/strapi": "4.25.8",
     "mysql": "2.18.1",
     "pg": "^8.12.0",
